--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -3,13 +3,15 @@
 
 <head>
     <meta charset="utf-8">
-    <title>task 7</title>
+    <title>task 7_7</title>
+
     <link rel="shortcut icon" type="image/x-icon" href="images/icon.png">
     <link rel="stylesheet" href="styles/4-common.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/6-filters.css">
     <link rel="stylesheet" href="styles/7-places.css">
+
 </head>
 
 <body style="margin: 0; padding: 0;">
@@ -33,9 +35,11 @@
                         </ul>
                     </li>
                     <li>
+
                         <h2>Casablanca:</h2>
                     </li>
                     <li>
+
                         <ul class="popover_list">
                             <li>Settat</li>
                             <li>Mohammadia</li>
@@ -66,10 +70,12 @@
                 <article>
                     <h2>Villa</h2>
                 </article>
+                
             </div>
         </section>
     </div>
     <footer>Best School</footer>
+
 </body>
 
 </html>
