--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -3,13 +3,15 @@
 
 <head>
     <meta charset="utf-8">
-    <title>task 8</title>
+    <title>task 8_8</title>
+
     <link rel="shortcut icon" type="image/x-icon" href="images/icon.png">
     <link rel="stylesheet" href="styles/4-common.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/6-filters.css">
     <link rel="stylesheet" href="styles/8-places.css">
+
 </head>
 
 <body style="margin: 0; padding: 0;">
@@ -51,6 +53,7 @@
                         </ul>
                     </li>
                 </ul>
+
             </div>
             <div class="amenities">
                 <h3>Amenities</h3>
@@ -72,6 +75,7 @@
                             <h2>Apartement</h2>
                         </div>
                         <div class="price_by_night">
+
                             <div class="price">
                                 $50
                             </div>
@@ -84,6 +88,7 @@
                             <div class="guest_number">
                                 <h2>3 Guests</h2>
                             </div>
+
                         </div>
                         <div class="number_rooms">
                             <div class="rooms_icon">
@@ -110,6 +115,7 @@
                         The old medina, near the beach, City center.
                     </div>
                 </article>
+
                 <article>
                     <div class="price_title">
                         <div class="article_title">
@@ -203,6 +209,7 @@
             </div>
         </section>
     </div>
+    
     <footer>Best School</footer>
 </body>
 
