--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -2,19 +2,19 @@
 <html lang="en">
     <head>
     <meta charset="utf-8">
-    <title>task 1</title>
+    <title>task 1_1</title>
     <style>
         body {
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #fa0606;
+            background-color: #FF0000;
             height: 70px;
             width: 100%;
         }
         footer {
-            background-color: #06f806;
+            background-color: #00FF00;
             position: absolute;
             bottom: 0;
             height: 60px;
@@ -22,11 +22,17 @@
             text-align: center;
             line-height:60px;
         }
+
     </style>
     </head>
 
     <body style="margin: 0; padding: 0;">
-        <header></header>
+        <header>
+
+        </header>
         <footer>Best School</footer>
+
     </body>
+
+
 </html>
