--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -3,13 +3,15 @@
 
 <head>
     <meta charset="utf-8">
-    <title>task 9</title>
+    <title>task 9_9</title>
+
     <link rel="shortcut icon" type="image/x-icon" href="images/icon.png">
     <link rel="stylesheet" href="styles/4-common.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/6-filters.css">
     <link rel="stylesheet" href="styles/100-places.css">
+
 </head>
 
 <body style="margin: 0; padding: 0;">
@@ -22,8 +24,6 @@
             <div class="locations">
                 <h3>States</h3>
                 <h4>Rabat, Tanger, Marrakech...</h4>
-
-
                 <ul class="popover">
                     <li>
                         <h2>Rabat:</h2>
@@ -47,6 +47,7 @@
                         <h2>Marrakech:</h2>
                     </li>
                     <li>
+
                         <ul class="popover_list">
                             <li>Marrakech</li>
                             <li>Essaouira</li>
@@ -54,8 +55,6 @@
                     </li>
                 </ul>
             </div>
-
-
             <div class="amenities">
                 <h3>Amenities</h3>
                 <h4>Wi-Fi, Tv...</h4>
@@ -66,11 +65,7 @@
                     <li>Refrigerator</li>
                 </ul>
             </div>
-
-
         </section>
-
-        
         <section class="places">
             <h1>Places</h1>
             <div class="articles">
@@ -78,6 +73,7 @@
                     <div class="price_title">
                         <div class="article_title">
                             <h2>Apartement</h2>
+
                         </div>
                         <div class="price_by_night">
                             <div class="price">
@@ -120,6 +116,7 @@
                     <div class="amenities">
                         <h2>Amenities</h2>
                         <ul>
+
                             <li>
                                 <div class="oven_icon"></div>
                                 <span>Oven</span>
@@ -161,6 +158,7 @@
                         </div>
                     </div>
                     <div class="information">
+
                         <div class="max_guest">
                             <div class="guest_icon">
                             </div>
@@ -236,6 +234,7 @@
                             </div>
                             <div class="guest_number">
                                 <h2>7 Guests</h2>
+
                             </div>
                         </div>
                         <div class="number_rooms">
@@ -283,6 +282,7 @@
                     </div>
                     <div class="reviews">
                         <h2>3 Reviews</h2>
+
                         <ul>
                             <li>
                                 <h3>From Jack the 1st august 2020:</h3>
@@ -310,6 +310,7 @@
         </section>
     </div>
     <footer>Best School</footer>
+    
 </body>
 
 </html>
