--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
+
 <html lang="en">
     <head>
+
     <meta charset="utf-8">
-    <title>task 3</title>
+    <title>task 3_3</title>
+
     <link rel="shortcut icon" type="image/x-icon" href="images/icon.png">
     <link rel="stylesheet" href="styles/3-common.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
+
     </head>
 
     <body style="margin: 0; padding: 0;">
-        <header>
-            <div class="logo"></div>
 
+        <header>
+           
+            <div class="logo"></div>
+            
         </header>
+
         <footer>Best School</footer>
-        <h/>
+
+
     </body>
+
 </html>
