--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
     <head>
+
     <meta charset="utf-8">
-    <title>task 4</title>
+    <title>task 4_4</title>
+
     <link rel="shortcut icon" type="image/x-icon" href="images/icon.png">
     <link rel="stylesheet" href="styles/4-common.css">
     <link rel="stylesheet" href="styles/4-header.css">
@@ -20,5 +23,6 @@
             </section>
         </div>
         <footer>Best School</footer>
+        
     </body>
 </html>
