--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -2,12 +2,14 @@
 <html lang="en">
     <head>
     <meta charset="utf-8">
-    <title>task 5</title>
+    <title>task 5_5</title>
+
     <link rel="shortcut icon" type="image/x-icon" href="images/icon.png">
     <link rel="stylesheet" href="styles/4-common.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/5-filters.css">
+
     </head>
 
     <body style="margin: 0; padding: 0;">
@@ -28,5 +30,6 @@
             </section>
         </div>
         <footer>Best School</footer>
+        
     </body>
 </html>
