--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 
 <head>
+
     <meta charset="utf-8">
-    <title>task 6</title>
+    <title>task 6_6</title>
+
     <link rel="shortcut icon" type="image/x-icon" href="images/icon.png">
     <link rel="stylesheet" href="styles/4-common.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/6-filters.css">
+
 </head>
 
 <body style="margin: 0; padding: 0;">
